--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -546,17 +546,23 @@ ul li {
         height: 250px;
     }
     .mr-auto .nav-item .nav-link {
-        /* color: orange !important;
-        border-bottom: 2.5px solid orange; */
         margin-top: 1em;
-        left: 285px;
+        /* left: 285px; */
         color: #fff !important;
         align-self: center;
-        width: 20%;
+        width: 100%;
         text-align: center;
     }
     .mr-auto .nav-item .nav-link:hover {
         color: yellow !important;
+    }
+    .signup {
+        position: relative;
+        right: 0px;
+        top: 120px;
+        padding-bottom: 0.5em;
+        border-bottom: 2.5px solid #fff;
+        color: rgba(255, 255, 255, 0.5) !important;
     }
 }
 
@@ -564,17 +570,11 @@ ul li {
     .form-container {
         width: 70%;
     }
-    /* .signup {
-        left: 270px;
-    } */
 }
 
 @media (min-width: 950px) and (max-width: 1200px) {
     .form-container {
         width: 70%;
-    }
-    .signup {
-        left: 370px;
     }
 }
 
