--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -485,18 +485,21 @@ body {
         width: 250px;
         height: 250px;
     }
-    .mr-auto .nav-item .nav-link {
-        color: orange !important;
-        border-bottom: 2.5px solid orange;
+    .nav-item .signin {
+        position: relative;
+        top: 50px;
+        font-size: 2.4em;
+        left: 0%;
+        text-align: center;
+        margin-bottom: 10px;
         margin-top: 1em;
-        left: 285px;
-        color: #fff !important;
-        align-self: center;
         display: flex;
+        width: 100%;
         flex-direction: column;
         justify-content: center;
-        width: 20%;
-        text-align: center;
+        padding-bottom: 0.5em;
+        border-bottom: 2.5px solid #fff;
+        color: rgba(255, 255, 255, 0.5) !important;
     }
     .mr-auto .nav-item .nav-link:hover {
         color: yellow !important;
